force-app/main/default/objects/InSituGen__InSitu_AppSetting__c/InSituGen__InSitu_AppSetting__c.object-meta.xml
<CustomObject>
    <description>An iTools Configuration Manager custom object that contains configuration information for each of the iTools in the iTools for Salesforce CRM collection.</description>
    <label>iTools Setting</label>
    <nameField>
        <label>Setting Key</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>iTools Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>