force-app/main/default/objects/InSituGen__InSitu_AppSetting__c/fields/InSituGen__Allow_Blank_Value__c.field-meta.xml
<CustomField>
    <fullName>InSituGen__Allow_Blank_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Value is permitted to be blank.</description>
    <label>Allow Blank Value</label>
    <type>Checkbox</type>
</CustomField>