force-app/main/default/objects/InSituGen__InSitu_AppSetting__c/fields/InSituGen__Allow_Edit__c.field-meta.xml
<CustomField>
    <fullName>InSituGen__Allow_Edit__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if  the site is permitted to change the Value.</description>
    <label>Allow Edit</label>
    <type>Checkbox</type>
</CustomField>