force-app/main/default/objects/InSituGen__InSitu_AppSetting__c/fields/InSituGen__Allow_View__c.field-meta.xml
<CustomField>
    <fullName>InSituGen__Allow_View__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if  the site is permitted to see the record.</description>
    <label>Allow View</label>
    <type>Checkbox</type>
</CustomField>