force-app/main/default/objects/InSituGen__InSitu_AppSetting__c/fields/InSituGen__Application__c.field-meta.xml
<CustomField>
    <fullName>InSituGen__Application__c</fullName>
    <description>Identifies the application to which the setting applies.</description>
    <label>Application</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>