force-app/main/default/objects/InSituGen__InSitu_AppSetting__c/fields/InSituGen__Custom_Delete_URL__c.field-meta.xml
<CustomField>
    <fullName>InSituGen__Custom_Delete_URL__c</fullName>
    <description>The URL of the Visualforce page in the extension page that will handle the Delete processing for the setting&apos;s value.</description>
    <label>Custom Delete URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>