force-app/main/default/objects/InSituGen__InSitu_AppSetting__c/fields/InSituGen__Custom_View_URL__c.field-meta.xml
<CustomField>
    <fullName>InSituGen__Custom_View_URL__c</fullName>
    <label>Custom View URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>