force-app/main/default/objects/InSituGen__InSitu_AppSetting__c/fields/InSituGen__Description__c.field-meta.xml
<CustomField>
    <fullName>InSituGen__Description__c</fullName>
    <description>Description of the application setting.  Displayed to assist the administrator in setting the correct value.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>