force-app/main/default/objects/InSituGen__InSitu_AppSetting__c/fields/InSituGen__Display_Sequence__c.field-meta.xml
<CustomField>
    <fullName>InSituGen__Display_Sequence__c</fullName>
    <description>Number to control the order of settings displayed within a Display Group.  Settings with a smaller number appear first.</description>
    <label>Display Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>