force-app/main/default/objects/InSituGen__InSitu_AppSetting__c/fields/InSituGen__FL_MaxFields__c.field-meta.xml
<CustomField>
    <fullName>InSituGen__FL_MaxFields__c</fullName>
    <label>FieldList Max Fields</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>