force-app/main/default/objects/InSituGen__InSitu_AppSetting__c/fields/InSituGen__FL_sObject__c.field-meta.xml
<CustomField>
    <fullName>InSituGen__FL_sObject__c</fullName>
    <description>API Name of the object from which the fields for a FieldList setting must come</description>
    <label>FieldList Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>