force-app/main/default/objects/InSituGen__InSitu_AppSetting__c/fields/InSituGen__Large_Value__c.field-meta.xml
<CustomField>
    <fullName>InSituGen__Large_Value__c</fullName>
    <description>Field used to store the value of settings which are too large to store in the 255 character text field.</description>
    <label>Value</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>