force-app/main/default/objects/InSituGen__InSitu_AppSetting__c/fields/InSituGen__Large_Value_OOB__c.field-meta.xml
<CustomField>
    <fullName>InSituGen__Large_Value_OOB__c</fullName>
    <description>Out of the Box value for a setting whose value can be larger than 255 characters.</description>
    <label>Large Value OOB</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>