force-app/main/default/objects/InSituGen__InSitu_AppSetting__c/fields/InSituGen__PL_Options__c.field-meta.xml
<CustomField>
    <fullName>InSituGen__PL_Options__c</fullName>
    <description>Comma separated list of options for data types DT_YN and DT_PICKLIST.  If DT_YN, the first value is the Yes value and the second is the no.  If left blank on a DT_YN, the values &quot;Yes&quot; and &quot;No&quot; are used.</description>
    <label>Pick List Options</label>
    <length>255</length>
    <type>Text</type>
</CustomField>