force-app/main/default/objects/InSituGen__InSitu_AppSetting__c/fields/InSituGen__Publisher__c.field-meta.xml
<CustomField>
    <fullName>InSituGen__Publisher__c</fullName>
    <description>Identifies the organization that created the application to which the setting applies.</description>
    <label>Publisher</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>