force-app/main/default/objects/InSituGen__InSitu_AppSetting__c/fields/InSituGen__Scope_Indicator__c.field-meta.xml
<CustomField>
    <fullName>InSituGen__Scope_Indicator__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Indicates if the setting value is a global (1) or a user specific (5).</description>
    <inlineHelpText>1 = Global
5 = User Specific</inlineHelpText>
    <label>Scope Indicator</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>