force-app/main/default/objects/InSituGen__InSitu_AppSetting__c/fields/InSituGen__Scope_ProfileID__c.field-meta.xml
<CustomField>
    <fullName>InSituGen__Scope_ProfileID__c</fullName>
    <description>Identifies the profile for which the profile specific setting override applies. Must be set when Scope Indicator = 3 and null when Scope Indicator = any other value.</description>
    <label>ProfileID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>