force-app/main/default/objects/InSituGen__InSitu_AppSetting__c/fields/InSituGen__Scope_RoleID__c.field-meta.xml
<CustomField>
    <fullName>InSituGen__Scope_RoleID__c</fullName>
    <description>Identifies the role for which the role specific setting override applies. Must be set when Scope Indicator = 4 and null when Scope Indicator = any other value.</description>
    <label>RoleID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>