force-app/main/default/objects/InSituGen__InSitu_AppSetting__c/fields/InSituGen__Scope_User__c.field-meta.xml
<CustomField>
    <fullName>InSituGen__Scope_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the user for which the user specific setting override applies.  Must be set when Scope Indicator = 5 and null when Scope Indicator = 1.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>InSitu_App_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>