force-app/main/default/objects/InSituGen__InSitu_AppSetting__c/fields/InSituGen__Setting__c.field-meta.xml
<CustomField>
    <fullName>InSituGen__Setting__c</fullName>
    <description>Identifies the specific  application setting.</description>
    <label>Setting</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>