force-app/main/default/objects/InSituGen__InSitu_AppSetting__c/fields/InSituGen__Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>InSituGen__Unique_Identifier__c</fullName>
    <description>Special field used to ensure proper application setting uniqueness.  Its value MUST be set as: Application+Publisher+Setting+ Scope Indicator+Scope User.  A trigger exists to set this value properly.</description>
    <externalId>true</externalId>
    <label>Unique Identifier</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>