force-app/main/default/objects/InSituGen__InSitu_AppSetting__c/fields/InSituGen__Value__c.field-meta.xml
<CustomField>
    <fullName>InSituGen__Value__c</fullName>
    <description>The value of the application setting in string form.</description>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>