force-app/main/default/objects/InSituGen__InSitu_AppSetting__c/fields/InSituGen__Value_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>InSituGen__Value_Data_Type__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Numeric identifier for the logical data type of the setting.  Values are used for validation and are specific to InSitu Application Settings.</description>
    <label>Value Data Type</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>