force-app/main/default/objects/InSituGen__InSitu_AppSetting__c/fields/InSituGen__Version_Date__c.field-meta.xml
<CustomField>
    <fullName>InSituGen__Version_Date__c</fullName>
    <description>This is the date that the InSitu Software data publication mechanism last touched the record.</description>
    <label>Version Date</label>
    <type>DateTime</type>
</CustomField>