force-app/main/default/objects/InSituGen__InSitu_AppSetting__c/fields/InSituGen__Version_Number__c.field-meta.xml
<CustomField>
    <fullName>InSituGen__Version_Number__c</fullName>
    <description>This is the InSitu Software specific version number for the record.  It will not necessarily match the version number of the application it is associated with.</description>
    <label>Version Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>