force-app/main/default/objects/InSituGen__InSitu_AppSetting__c/validationRules/InSituGen__Scope_ProfileID_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>InSituGen__Scope_ProfileID_Null</fullName>
    <active>true</active>
    <description>The Scope_ProfileID__c field must be null when the Scope_Indicator__c is set to global</description>
    <errorConditionFormula>InSituGen__Scope_Indicator__c  =  1 &amp;&amp; InSituGen__Scope_ProfileID__c  !=  null</errorConditionFormula>
    <errorDisplayField>InSituGen__Scope_ProfileID__c</errorDisplayField>
    <errorMessage>ProfileID cannot be set when the Scope Indicator is set to Global(1)</errorMessage>
</ValidationRule>