force-app/main/default/objects/InSituGen__InSitu_AppSetting__c/validationRules/InSituGen__Scope_User_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>InSituGen__Scope_User_Null</fullName>
    <active>true</active>
    <description>The Scope_User__c field must be null when the Acope_Indicator__c is set to global</description>
    <errorConditionFormula>InSituGen__Scope_Indicator__c  =  1 &amp;&amp; InSituGen__Scope_User__c  !=  null</errorConditionFormula>
    <errorDisplayField>InSituGen__Scope_User__c</errorDisplayField>
    <errorMessage>Scope user cannot be set when the Scope Indicator is set to Global(1)</errorMessage>
</ValidationRule>