force-app/main/default/objects/InSituGen__InSitu_AppSetting__c/validationRules/InSituGen__Value_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>InSituGen__Value_Required</fullName>
    <active>true</active>
    <description>Requires a value in the Value__c field IF the Allow_Blank_Value__ is set to false.</description>
    <errorConditionFormula>(InSituGen__Allow_Blank_Value__c  ==  false )  &amp;&amp;  
(InSituGen__Value_Data_Type__c != 9 || InSituGen__Value_Data_Type__c != 10) &amp;&amp;
(LEN( InSituGen__Value__c ) == 0)</errorConditionFormula>
    <errorDisplayField>InSituGen__Value__c</errorDisplayField>
    <errorMessage>The Value cannot be blank.</errorMessage>
</ValidationRule>