force-app/main/default/objects/InSituGen__InSitu_AppSetting__c/listViews/InSituGen__All_Global_App_Settings.listView-meta.xml
<ListView>
    <fullName>InSituGen__All_Global_App_Settings</fullName>
    <columns>NAME</columns>
    <columns>InSituGen__Setting__c</columns>
    <columns>InSituGen__Value__c</columns>
    <columns>InSituGen__Publisher__c</columns>
    <columns>InSituGen__Application__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>InSituGen__Allow_View__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>InSituGen__Scope_Indicator__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Global App Settings</label>
</ListView>