force-app/main/default/objects/InSituGen__InSitu_AppSetting__c/listViews/InSituGen__All_SETTINGS.listView-meta.xml
<ListView>
    <fullName>InSituGen__All_SETTINGS</fullName>
    <columns>InSituGen__Publisher__c</columns>
    <columns>InSituGen__Application__c</columns>
    <columns>NAME</columns>
    <columns>InSituGen__Setting__c</columns>
    <columns>InSituGen__Value__c</columns>
    <columns>InSituGen__Scope_Indicator__c</columns>
    <columns>InSituGen__Scope_User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Application Settings</label>
</ListView>