force-app/main/default/objects/InSituGen__InSitu_AppSetting__c/listViews/InSituGen__Applications.listView-meta.xml
<ListView>
    <fullName>InSituGen__Applications</fullName>
    <columns>InSituGen__Publisher__c</columns>
    <columns>InSituGen__Setting__c</columns>
    <columns>InSituGen__Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>InSituGen__Application__c</field>
        <operation>equals</operation>
        <value>SYSTEM</value>
    </filters>
    <label>Applications</label>
</ListView>