force-app/main/default/objects/InSituGen__InSitu_AppSetting__c/listViews/InSituGen__Publishers.listView-meta.xml
<ListView>
    <fullName>InSituGen__Publishers</fullName>
    <columns>InSituGen__Setting__c</columns>
    <columns>InSituGen__Value__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>InSituGen__Publisher__c</field>
        <operation>equals</operation>
        <value>SYSTEM</value>
    </filters>
    <filters>
        <field>InSituGen__Application__c</field>
        <operation>equals</operation>
        <value>Publisher</value>
    </filters>
    <label>Publishers</label>
</ListView>